--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "react-dom": ">=17.0"
   },
   "dependencies": {
-    "@webxr-input-profiles/motion-controllers": "^1.0.0",
+    "@webxr-input-profiles/motion-controllers": "https://github.com/marlon360/webxr-input-profiles",
     "react-merge-refs": "^1.1.0",
     "three-stdlib": "^2.6.4"
   }
